Some bugs fixed, custom scrollbar added. The mobile menu problem has been resolved, but need to redo the unreadable code.

--- a/css/style.css
+++ b/css/style.css
@@ -890,6 +890,25 @@ header {
   -o-transform: rotate(45deg);
 }
 
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 0 0.5px rgba(0, 0, 0, 0.2);
+          box-shadow: inset 0 0 0 0.5px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  background-color: #fbfbfb;
+}
+
+body::-webkit-scrollbar {
+  width: 15px;
+  background-color: #fbfbfb;
+}
+
+body::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 0 0.5px rgba(0, 0, 0, 0.2);
+          box-shadow: inset 0 0 0 0.5px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  background-color: #00cec9;
+}
+
 body {
   background-color: #1a2730;
   position: relative;
